# class_generator

./: .gitignore  CMakeLists.txt  deploy.sh  main.cpp
generator/: ModelGenerator.hpp  ViewGenerator.hpp
internal/: Parser.hpp  def.h
